--- a/node-demo3/package.json
+++ b/node-demo3/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "md5-node": "^1.0.1"
+    "md5-node": "^1.0.1",
+    "multiparty": "^4.2.1"
   }
 }
