--- a/node-demo3/package.json
+++ b/node-demo3/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "md5-node": "^1.0.1",
+    "mongoose": "^5.3.14",
     "multiparty": "^4.2.1"
   }
 }
