--- a/node-demo3/package.json
+++ b/node-demo3/package.json
@@ -14,7 +14,8 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "mongodb": "^3.1.9"
+    "mongodb": "^3.1.9",
+    "nodemon": "^1.18.9"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
