--- a/myapp/package.json
+++ b/myapp/package.json
@@ -10,7 +10,10 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
-    "http-errors": "~1.6.2",
+    "http-errors": "^1.7.1",
     "morgan": "~1.9.0"
+  },
+  "devDependencies": {
+    "mongoose": "^5.4.2"
   }
 }
